[package]
name = "carton"
version = "0.1.0"
description = "A very simple, lightweight container runtime"
authors = ["Arjen Verstoep"]
edition = "2021"
rust-version = "1.65"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
libcarton = { path = "../libcarton" }
log = "0.4"
