[package]
name = "libcarton"
version = "0.1.0"
description = "A very simple, lightweight container runtime"
author = ["Arjen Verstoep"]
edition = "2021"
rust-version = "1.65"
license = "Apache-2.0"

[dependencies]
cgroups-rs = "0.3"
libc = "0.2"
log = "0.4"
rand = "0.8"
thiserror = "1.0"

[dependencies.nix]
version = "0.27"
features = [
    "fs",
    "hostname",
    "mount",
    "process",
    "resource",
    "sched",
    "signal",
]
